# RedFM_MLP

./: .gitignore  .venv  README.md  column_types.md  download_clauds_catalogs.sh  github_worker.py  image_tabular_target_0723.md  multigpu.md  pixi.toml  pyproject.toml  runs.md  target_timm_0723.md
aion_magnitude/: FM_Qwen.py  FM_Qwen3.py  Inference_Opt_TFM.py  __init__.py  caching.py  clauds_bands.py  config.py  dataset.py  evaluation_cli.py  extra_bands.py  ilc.py  metrics.py  models.py  morphology.py  morphology_catalogue.py  plotting.py  qwen_posttraining.py  table_models.py  timm_morphology.py  training.py  utils.py
logs/: agy_purpose_analysis.md  aion_main_module.md  aion_u_band.md  all_mag_fusion.md  compactification_idea.md  cosmos_scaling.md  info_sep.md  qwen_0718a.md  staging_codex_0710a.md  target_0719_cuda.md  target_0719_science.md
notebooks/: aion_mlp_test.ipynb  aion_mlp_test.py  clauds_aion_ILC.ipynb  iotfm_mlp.py  iotfm_mlp_gnlll.py  qwen_aion_comparison.py  qwen_aion_timm_raw_comparison.py  qwen_mlp_full_comparison.py  qwen_mlp_full_image_comparison.py  qwen_posttraining_comparison.py  qwen_qwen_comparison.py  qwen_qwen_comparison.py.orig  recent_runs.txt
scripts/: copydata.py  download_clauds_tiles.py  image-on_comparison.sh  image-on_comparison_aion.sh  image-on_comparison_all_mlp.sh  image-on_comparison_mlp.sh  iotfm_mlp.sh  iotfm_mlp_gnlll.sh  iotfm_mlp_gnlll_scaling.sh  iotfm_mlp_magonly.sh  iotfm_mlp_missnormal.sh  iotfm_mlp_noflags.sh  qwen-aion_comparison.sh  qwen-mlp_full_comparison.sh  qwen-mlp_full_image_comparison.sh  qwen-mlp_full_raw_comparison.sh  qwen-qwen_comparison.sh  qwen-qwen_comparison_short.sh  qwen-qwen_comparison_short_mutigpu.sh  qwen-qwen_posttraining_comparison_multigpu.sh  run-qwen-evals-multigpu.sh  (+4 more)
(+30 files in other folders)
