[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-magnitude"
version = "0.3.0"
description = "AION + CLAUDS Magnitude Fusion and Adapter Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "astropy",
    "matplotlib",
]

[project.scripts]
aion-morphology = "aion_magnitude.morphology:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aion_magnitude*"]
