[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-magnitude"
version = "0.5.0"
description = "AION + CLAUDS Magnitude Fusion and Adapter Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "astropy",
    "matplotlib",
    "safetensors>=0.8.0,<0.9",
]

[project.optional-dependencies]
qwen-cuda = [
    "accelerate>=1.0,<2",
    "bitsandbytes>=0.49,<0.50",
    "transformers>=4.57,<5",
]
evals = [
    "pydantic-evals>=2,<3",
]
vision = [
    "timm>=1.0.28,<2",
]

[project.scripts]
aion-morphology = "aion_magnitude.morphology:main"
aion-eval = "aion_magnitude.evaluation.runner:main"
aion-qwen-eval-report = "aion_magnitude.evaluation.qwen_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aion_magnitude*"]
